Fix assignement and update methods for truck and trailer
