# src/main/java/pl/jkuznik/trucktracking/domain/truck/TruckController.java
@@ -1,9 +1,13 @@
 package pl.jkuznik.trucktracking.domain.truck;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import pl.jkuznik.trucktracking.domain.truck.api.command.AddTruckCommand;
+import pl.jkuznik.trucktracking.domain.truck.api.command.UpdateTruckCommand;
 import pl.jkuznik.trucktracking.domain.truck.api.dto.TruckDTO;
 
 import java.util.List;
@@ -44,6 +48,13 @@ public class TruckController {
 
         //TODO dopisać generowanie adresu pod ktorym bedzie dostepny nowy zasob oraz obsłużyć wyjątki
         return ResponseEntity.status(201).body(responseTruck);
+    }
+
+    @PatchMapping("/{uuid}")
+    public ResponseEntity<TruckDTO> updateTruck(@PathVariable String uuid, @RequestBody UpdateTruckCommand updateTruckCommand) throws Exception {
+        TruckDTO updatedTruck = truckService.updateTruckByBusinessId(UUID.fromString(uuid), updateTruckCommand);
+
+        return ResponseEntity.status(200).body(updatedTruck);
     }
 
     @DeleteMapping("/{uuid}")
