# src/main/java/pl/jkuznik/trucktracking/domain/truck/api/TruckApi.java
@@ -1,8 +1,10 @@
 package pl.jkuznik.trucktracking.domain.truck.api;
 
 import jakarta.validation.Valid;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 import pl.jkuznik.trucktracking.domain.truck.api.command.AddTruckCommand;
+import pl.jkuznik.trucktracking.domain.truck.api.command.UpdateTruckCommand;
 import pl.jkuznik.trucktracking.domain.truck.api.dto.TruckDTO;
 
 import java.time.Instant;
@@ -18,5 +20,9 @@ public interface TruckApi {
     List<TruckDTO> getAllTrucks();
     List<TruckDTO> getTrucksByDateRange(Instant startDate, Instant endDate);
 
+    @Transactional
+    TruckDTO updateTruckByBusinessId(UUID uuid, UpdateTruckCommand updateTruckCommand);
+
+    @Transactional
     void deleteTruckByBusinessId(UUID uuid);
 }
